--- a/app/src/main/res/layout/activity_single_product.xml
+++ b/app/src/main/res/layout/activity_single_product.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView"
-    android:fillViewport="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey_300"
+    android:fillViewport="true"
     app:stickyFooter="@+id/fav_layout"
     app:stickyHeader="@id/toolbar"
     tools:context=".activities.SingleProductActivity">
@@ -37,9 +37,9 @@
 
         <LinearLayout
             android:id="@+id/relativeLayout"
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <RelativeLayout
                 android:id="@+id/relativeLayout1"
@@ -57,7 +57,6 @@
                     app:layout_constraintStart_toStartOf="parent">
 
                 </androidx.viewpager.widget.ViewPager>
-
 
 
                 <TextView
@@ -243,12 +242,12 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/sb_text_size_17" />
 
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginStart="@dimen/sb_size_10"-->
-<!--                    android:text="Description"-->
-<!--                    android:textColor="@color/black" />-->
+                <!--                <TextView-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_marginStart="@dimen/sb_size_10"-->
+                <!--                    android:text="Description"-->
+                <!--                    android:textColor="@color/black" />-->
 
             </LinearLayout>
 
@@ -532,6 +531,7 @@
                     android:src="@drawable/ic_favourites" />
 
                 <Button
+                    android:id="@+id/btn_add_to_bag"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/black"
@@ -545,19 +545,19 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/sb_size_10"
                 android:background="@color/white"
                 android:orientation="vertical"
-                android:layout_marginTop="@dimen/sb_size_10"
                 android:paddingHorizontal="@dimen/sb_size_20"
                 android:paddingVertical="@dimen/sb_size_10">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:textStyle="bold"
                     android:layout_marginVertical="@dimen/sb_size_10"
-                    android:text="Recommendations For You"/>
+                    android:text="Recommendations For You"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -569,7 +569,7 @@
                         android:layout_width="0dp"
                         android:layout_height="150dp"
                         android:layout_weight="1"
-                        android:src="@drawable/demo"/>
+                        android:src="@drawable/demo" />
 
                     <ImageView
                         android:id="@+id/imageView3"
@@ -583,7 +583,7 @@
                         android:layout_width="0dp"
                         android:layout_height="150dp"
                         android:layout_weight="1"
-                        android:src="@drawable/demo"/>
+                        android:src="@drawable/demo" />
 
                 </LinearLayout>
 
