--- a/app/src/main/res/layout/fragment_wish_list.xml
+++ b/app/src/main/res/layout/fragment_wish_list.xml
@@ -52,4 +52,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_goneMarginTop="@dimen/sb_text_size_24" />
 
+    <ProgressBar
+        android:id="@+id/progressBar4"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
