--- a/app/src/main/res/layout/activity_single_product.xml
+++ b/app/src/main/res/layout/activity_single_product.xml
@@ -33,23 +33,38 @@
             app:collapsedTitleTextAppearance="@style/Toolbar.TitleText"
             app:contentScrim="@color/white"
             app:expandedTitleTextAppearance="@style/Toolbar.TitleText"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:scrimAnimationDuration="0">
 
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/viewpager"
-                android:layout_marginTop="@dimen/sb_size_20"
                 android:layout_width="match_parent"
-                android:layout_height="300dp" />
+                android:layout_height="match_parent" />
+
+            <TextView
+                android:id="@+id/slideTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|bottom"
+                android:layout_marginEnd="@dimen/sb_size_20"
+                android:layout_marginBottom="@dimen/sb_size_20"
+                android:alpha="0.7"
+                android:background="@drawable/bg_viewpager_pos"
+                android:padding="@dimen/sb_size_10"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sb_text_size_16"
+                android:textStyle="bold" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
-                app:title="Sweaters &amp; Cardigans"
+                app:menu="@menu/menu_single_product"
+                app:navigationIcon="@drawable/ic_back_arrow"
                 app:titleTextColor="@color/black" />
         </com.google.android.material.appbar.CollapsingToolbarLayout>
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <FrameLayout
@@ -117,24 +132,13 @@
                                 android:textSize="@dimen/sb_text_size_17"
                                 android:textStyle="bold" />
 
-                            <ImageButton
-                                android:id="@+id/share"
-                                android:layout_width="@dimen/sb_size_30"
-                                android:layout_height="@dimen/sb_size_28"
-                                android:layout_alignParentEnd="true"
-                                android:layout_marginTop="@dimen/sb_size_10"
-                                android:layout_marginEnd="20dp"
-                                android:background="@drawable/ic_share"
-                                android:scaleType="fitCenter" />
-
                             <RatingBar
                                 android:id="@+id/ratingBar4"
                                 style="@style/Widget.AppCompat.RatingBar.Small"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_below="@+id/share"
                                 android:layout_alignParentEnd="true"
-                                android:layout_marginTop="@dimen/sb_size_12"
+                                android:layout_marginTop="@dimen/sb_size_20"
                                 android:layout_marginEnd="@dimen/sb_size_20"
                                 android:isIndicator="true"
                                 android:numStars="5"
@@ -233,10 +237,11 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginVertical="@dimen/sb_size_10"
                                     android:drawablePadding="@dimen/sb_size_10"
+                                    android:gravity="start|center"
                                     android:padding="@dimen/sb_size_10"
                                     android:text="Free standard shipping"
                                     android:textColor="@color/black"
-                                    app:drawableStartCompat="@drawable/ic_shipping_size" />
+                                    app:drawableStartCompat="@drawable/ic_group_629" />
 
 
                                 <View
@@ -248,9 +253,9 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginBottom="@dimen/sb_size_20"
-                                    android:drawablePadding="@dimen/sb_size_10"
+                                    android:drawablePadding="@dimen/sb_size_25"
                                     android:gravity="start|center"
-                                    android:padding="@dimen/sb_size_10"
+                                    android:padding="@dimen/sb_size_20"
                                     android:text="Return Policy"
                                     android:textColor="@color/black"
                                     app:drawableStartCompat="@drawable/ic_return_size" />
@@ -548,21 +553,21 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@color/white"
                             android:layout_below="@+id/relativeLayout3"
-                            android:orientation="vertical"
-                            android:layout_marginBottom="@dimen/sb_size_60"
                             android:layout_marginTop="@dimen/sb_size_10"
+                            android:layout_marginBottom="@dimen/sb_size_60"
+                            android:background="@color/white"
+                            android:orientation="vertical"
                             android:paddingHorizontal="@dimen/sb_size_20"
                             android:paddingVertical="@dimen/sb_size_10">
 
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:textColor="@color/black"
-                                android:textStyle="bold"
                                 android:layout_marginVertical="@dimen/sb_size_10"
-                                android:text="Recommendations For You"/>
+                                android:text="Recommendations For You"
+                                android:textColor="@color/black"
+                                android:textStyle="bold" />
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -574,7 +579,7 @@
                                     android:layout_width="0dp"
                                     android:layout_height="150dp"
                                     android:layout_weight="1"
-                                    android:src="@drawable/demo"/>
+                                    android:src="@drawable/demo" />
 
                                 <ImageView
                                     android:id="@+id/imageView3"
@@ -588,7 +593,7 @@
                                     android:layout_width="0dp"
                                     android:layout_height="150dp"
                                     android:layout_weight="1"
-                                    android:src="@drawable/demo"/>
+                                    android:src="@drawable/demo" />
 
                             </LinearLayout>
 
