--- a/app/src/main/res/layout/activity_single_product.xml
+++ b/app/src/main/res/layout/activity_single_product.xml
@@ -669,6 +669,7 @@
             android:src="@drawable/ic_favourites" />
 
         <Button
+            android:id="@+id/btn_add_to_bag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/black"
