--- a/app/src/main/res/layout/activity_account_security.xml
+++ b/app/src/main/res/layout/activity_account_security.xml
@@ -104,4 +104,9 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_container"/>
+
 </RelativeLayout>
