--- a/app/src/main/res/layout/activity_account_security.xml
+++ b/app/src/main/res/layout/activity_account_security.xml
@@ -19,15 +19,20 @@
         app:title="Account Security"
         app:titleTextColor="@color/black" />
 
+    <FrameLayout
+        android:id="@+id/account_security_frame_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -38,9 +43,9 @@
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/sb_size_5"
                 android:background="@color/white"
                 android:orientation="vertical"
-                android:layout_marginTop="@dimen/sb_size_5"
                 android:paddingVertical="@dimen/sb_size_5"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -90,6 +95,7 @@
                     android:textStyle="bold"
                     app:drawableEndCompat="@drawable/ic_baseline_right_24" />
             </LinearLayout>
+
             <ViewStub
                 android:id="@+id/vsEmptyScreen"
                 android:layout_width="match_parent"
@@ -102,6 +108,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
