--- a/app/src/main/res/layout/activity_single_product.xml
+++ b/app/src/main/res/layout/activity_single_product.xml
@@ -152,27 +152,26 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/product_name"
-                                android:layout_toEndOf="@id/price"
                                 android:layout_marginStart="@dimen/sb_size_20"
                                 android:layout_marginTop="@dimen/sb_size_13"
+                                android:layout_toEndOf="@id/price"
                                 android:fontFamily="@font/gothambold"
                                 android:textColor="@color/black"
-                                android:visibility="gone"
                                 android:textSize="@dimen/sb_text_size_17"
-                                android:textStyle="bold" />
+                                android:textStyle="bold"
+                                android:visibility="gone" />
 
                             <TextView
                                 android:id="@+id/salePercentage"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:visibility="gone"
                                 android:layout_below="@id/product_name"
-                                android:layout_toEndOf="@id/salePrice"
                                 android:layout_marginStart="@dimen/sb_size_15"
                                 android:layout_marginTop="@dimen/sb_size_13"
+                                android:layout_toEndOf="@id/salePrice"
                                 android:textColor="@color/black"
                                 android:textSize="@dimen/sb_text_size_16"
-                                />
+                                android:visibility="gone" />
 
                             <RatingBar
                                 android:id="@+id/ratingBar4"
@@ -206,12 +205,12 @@
                             <androidx.recyclerview.widget.RecyclerView
                                 android:id="@+id/colorRecyclerView"
                                 android:layout_width="match_parent"
-                                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                 android:layout_height="wrap_content"
-                                android:nestedScrollingEnabled="false"
                                 android:layout_below="@+id/color"
                                 android:layout_marginHorizontal="@dimen/sb_size_20"
-                                android:layout_marginTop="@dimen/sb_size_10" />
+                                android:layout_marginTop="@dimen/sb_size_10"
+                                android:nestedScrollingEnabled="false"
+                                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
                             <TextView
                                 android:id="@+id/sizeTextView"
@@ -230,12 +229,12 @@
                                 android:id="@+id/sizeRecyclerView"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:nestedScrollingEnabled="false"
-                                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                 android:layout_below="@+id/sizeTextView"
                                 android:layout_marginHorizontal="@dimen/sb_size_20"
                                 android:layout_marginTop="@dimen/sb_size_10"
-                                android:layout_marginBottom="@dimen/sb_size_15" />
+                                android:layout_marginBottom="@dimen/sb_size_15"
+                                android:nestedScrollingEnabled="false"
+                                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
                         </RelativeLayout>
 
@@ -272,10 +271,109 @@
                                 android:textAllCaps="false"
                                 android:textSize="12sp" />
 
+                            <RelativeLayout
+                                android:id="@+id/changePinRelative"
+                                android:visibility="gone"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/shippingToTextView"
+                                android:layout_marginTop="@dimen/sb_size_10"
+                                android:background="@color/white">
+
+<!--                                <TextView-->
+<!--                                    android:id="@+id/deliveryDetailTv"-->
+<!--                                    android:layout_width="wrap_content"-->
+<!--                                    android:layout_height="wrap_content"-->
+<!--                                    android:layout_marginStart="@dimen/sb_size_20"-->
+<!--                                    android:layout_marginTop="@dimen/sb_size_15"-->
+<!--                                    android:fontFamily="@font/gothamblack"-->
+<!--                                    android:text="Delivery Details"-->
+<!--                                    android:textColor="@color/black"-->
+<!--                                    android:textSize="@dimen/sb_text_size_16"-->
+<!--                                    android:textStyle="bold" />-->
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="@dimen/sb_size_20"
+                                    android:layout_marginTop="@dimen/sb_text_size_8"
+                                    android:orientation="vertical">
+
+
+                                    <LinearLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:orientation="horizontal">
+
+                                        <com.google.android.material.textfield.TextInputLayout
+                                            android:id="@+id/textInputLayout"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:layout_weight="1"
+                                            android:layout_marginEnd="@dimen/sb_size_20"
+                                            app:hintTextColor="@color/black"
+                                            app:layout_constraintTop_toBottomOf="@+id/cardView">
+
+                                            <com.google.android.material.textfield.TextInputEditText
+                                                android:id="@+id/pincodeEditText"
+                                                android:layout_width="match_parent"
+                                                android:layout_height="wrap_content"
+                                                android:gravity="start"
+                                                android:hint="Enter PINCODE"
+                                                android:inputType="phone"
+                                                android:maxLength="10"
+                                                android:maxLines="1"
+                                                android:textColor="@color/colorPrimaryDark"
+                                                android:textColorHint="@color/colorPrimaryDark"
+                                                android:textSize="@dimen/sb_text_size_17"
+                                                android:theme="@style/MyEditTextTheme" />
+                                        </com.google.android.material.textfield.TextInputLayout>
+
+                                        <Button
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:layout_weight="0"
+                                            android:background="@color/black"
+                                            android:textColor="@color/white"
+                                            android:layout_marginEnd="@dimen/sb_size_20"
+                                            android:text="check"/>
+
+                                    </LinearLayout>
+
+
+                                    <View
+                                        android:layout_marginTop="@dimen/sb_size_5"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="1dp"
+                                        android:background="#EEEEEE" />
+
+                                    <TextView
+                                        android:id="@+id/deliverStatusTv"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginBottom="@dimen/sb_size_4"
+                                        android:drawablePadding="@dimen/sb_size_10"
+                                        android:gravity="start|center"
+                                        android:layout_marginTop="@dimen/sb_size_2"
+                                        android:padding="@dimen/sb_size_10"
+                                        android:text="Usually Delivered in 5 days"
+                                        android:textColor="@color/black"
+                                        app:drawableStartCompat="@drawable/ic_shipping_size" />
+
+                                    <View
+                                        android:layout_marginTop="@dimen/sb_size_5"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="1dp"
+                                        android:layout_marginEnd="@dimen/sb_size_20"
+                                        android:background="@color/black" />
+                                </LinearLayout>
+
+                            </RelativeLayout>
+
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_below="@id/shippingToTextView"
+                                android:layout_below="@id/changePinRelative"
                                 android:layout_marginStart="@dimen/sb_size_20"
                                 android:layout_marginTop="@dimen/sb_text_size_8"
                                 android:orientation="vertical">
