--- a/app/src/main/res/layout/activity_shopping_bag.xml
+++ b/app/src/main/res/layout/activity_shopping_bag.xml
@@ -16,40 +16,107 @@
         app:layout_constraintTop_toTopOf="parent"
         app:title="Shopping Bag" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/shopping_bag_recycler_view"
-        android:layout_width="@dimen/sb_size_0"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/clBillDetails"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:paddingBottom="@dimen/sb_size_40"
-        android:clipToPadding="false"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        tools:listitem="@layout/item_shopping_bag" />
-
     <RelativeLayout
         android:id="@+id/rlProgressBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/transparent_shade"
-        android:elevation="@dimen/sb_size_6"
-        android:gravity="center"
         android:clickable="true"
+        android:elevation="@dimen/sb_size_6"
         android:focusable="true"
-        tools:visibility="gone"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="gone">
 
         <ProgressBar
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
-            android:elevation="@dimen/sb_size_6"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:elevation="@dimen/sb_size_6" />
     </RelativeLayout>
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toTopOf="@id/clBillDetails"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/tvOffer"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/sb_size_50"
+                android:background="@color/blue_100"
+                android:gravity="center_vertical|start"
+                android:text="Temporary Offer"
+                android:textColor="@color/blue_grey_900"
+                android:textSize="@dimen/sb_text_size_14"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:paddingHorizontal="@dimen/sb_size_18"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/shopping_bag_recycler_view"
+                android:layout_width="@dimen/sb_size_0"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                tools:visibility="gone"
+                android:layout_marginTop="@dimen/sb_size_12"
+                android:paddingBottom="@dimen/sb_size_40"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvOffer"
+                tools:listitem="@layout/item_shopping_bag" />
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardElevation="@dimen/sb_size_0"
+                app:layout_constraintTop_toBottomOf="@id/shopping_bag_recycler_view"
+                android:layout_marginTop="@dimen/sb_size_8">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/tvDummyText2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/sb_size_12"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:text="You might also want to fill this with"
+                        android:textColor="@color/blue_grey_900"
+                        android:paddingHorizontal="@dimen/sb_text_size_18"
+                        android:textSize="@dimen/sb_size_14"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rvSuggestionProduct"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/sb_size_12"
+                        android:clipToPadding="false"
+                        app:layout_constraintTop_toBottomOf="@+id/tvDummyText2"
+                        android:paddingBottom="@dimen/sb_size_60"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clBillDetails"
@@ -57,19 +124,18 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:elevation="@dimen/sb_size_4"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
             android:id="@+id/tvDummyText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/sb_size_16"
-            android:layout_marginVertical="@dimen/sb_size_6"
-            android:text="Total cart value"
+            android:layout_marginStart="@dimen/sb_size_18"
+            android:text="Total: "
             android:textColor="@color/grey_800"
-            android:textSize="@dimen/sb_size_16"
+            android:textSize="@dimen/sb_size_14"
             app:layout_constraintBottom_toTopOf="@+id/btCheckOut"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -78,30 +144,44 @@
             android:id="@+id/tvCartPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/sb_size_16"
-            android:layout_marginVertical="@dimen/sb_size_6"
+            android:layout_marginVertical="@dimen/sb_size_10"
             android:text="$ 500"
+            android:layout_marginStart="@dimen/sb_size_4"
             android:textColor="@color/black"
             android:textSize="@dimen/sb_size_16"
             app:layout_constraintBottom_toTopOf="@+id/btCheckOut"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tvDummyText"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/btCheckOut"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/sb_size_16"
-            android:paddingVertical="@dimen/sb_size_12"
+            android:layout_height="@dimen/sb_size_45"
             android:layout_marginBottom="@dimen/sb_size_8"
-            android:text="Checkout"
+            android:layout_marginHorizontal="@dimen/sb_size_18"
+            android:background="@color/grey_900"
             android:gravity="center"
+            android:paddingVertical="@dimen/sb_size_8"
+            android:text="Checkout"
             android:textColor="@color/white"
-            android:background="@color/black"
+            app:layout_constraintBottom_toTopOf="@id/tvApplyCoupon"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/tvApplyCoupon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Apply coupon code on the next screen"
+            android:textColor="@color/blue_grey_900"
+            android:layout_marginBottom="@dimen/sb_size_8"
+            android:textSize="@dimen/sb_text_size_12"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
