--- a/app/src/main/res/layout/activity_single_product.xml
+++ b/app/src/main/res/layout/activity_single_product.xml
@@ -417,6 +417,7 @@
                                     android:paddingHorizontal="@dimen/sb_size_18">
 
                                     <ImageView
+                                        android:id="@+id/deliverStatusIv"
                                         android:layout_width="@dimen/sb_size_28"
                                         android:layout_height="@dimen/sb_size_28"
                                         android:layout_gravity="center_vertical"
@@ -428,7 +429,8 @@
                                         android:layout_height="wrap_content"
                                         android:gravity="start|center_vertical"
                                         android:paddingHorizontal="@dimen/sb_size_18"
-                                        android:text="Usually Delivered in 5 days"
+                                        android:lineSpacingExtra="3dp"
+                                        android:text="Usually delivery in 5 days"
                                         android:textColor="@color/black" />
 
                                 </LinearLayout>
