--- a/app/src/main/res/layout/item_place_order_screen_product.xml
+++ b/app/src/main/res/layout/item_place_order_screen_product.xml
@@ -2,12 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
+    android:background="@color/white"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
-        android:layout_width="@dimen/sb_size_140"
-        android:layout_height="200dp"
+        android:layout_width="125dp"
+        android:layout_height="165dp"
         android:layout_marginHorizontal="@dimen/sb_size_4"
         android:layout_marginVertical="@dimen/sb_size_8"
         app:cardCornerRadius="@dimen/sb_size_4"
@@ -21,6 +22,7 @@
             android:id="@+id/imgProductImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scaleType="center"
             android:background="@color/grey_100" />
     </androidx.cardview.widget.CardView>
 
